--- a/fe/src/app.css
+++ b/fe/src/app.css
@@ -2,9 +2,13 @@
     --card-background:#258c9f;
     --active-stat-color:#6da4a7;
     --letters-color:#122020;
+    --background: #DBD2E0;
+
+
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 html, body, #app, main {
     height:100%;
+    background:var(--background);
 }
